// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`UserSettingsPermissionsPage > empty state 1`] = `
<DocumentFragment>
  <div
    class="w-100"
  >
    <div
      class="container mb-3"
    >
      <div>
        <h2
          class="h2 heading"
        >
          <span
            class="wrapper breadcrumb"
          >
            <span
              class="path"
            >
              <span
                class="text"
              >
                Permissions
              </span>
            </span>
          </span>
        </h2>
        <p
          class="description"
        >
          Learn more about 
          <a
            class="anchorLink"
            href="/help/admin/permissions/syncing"
          >
            permissions syncing
          </a>
          .
        </p>
      </div>
    </div>
    <div
      class="container mb-3"
    >
      <div
        class="d-flex"
      >
        <b>
          Last update to permissions 
        </b>
        <span
          class="d-flex flex-grow-1"
        >
          <span
            class="flex-grow-1 pl-2"
          >
            Never
          </span>
        </span>
      </div>
      <p
        class="text-muted mt-2 mb-4"
      >
        <svg
          aria-label="more-info text-normal"
          class="mdi-icon iconInline"
          fill="currentColor"
          height="24"
          role="img"
          viewBox="0 0 24 24"
          width="24"
        >
          <path
            d="M11,9H13V7H11M12,20C7.59,20 4,16.41 4,12C4,7.59 7.59,4 12,4C16.41,4 20,7.59 20,12C20,16.41 16.41,20 12,20M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2M11,17H13V11H11V17Z"
          />
        </svg>
         The timestamp indicates the last update made to the repository permissions of this user. If the value 
        <i>
          never
        </i>
         is displayed, it means we currently do not have any permission records for the user. However, please note that the user may have had permissions stored in Sourcegraph in the past.
      </p>
      <div
        class="actionContainer userSettingsPermissionsPageSyncContainer"
      >
        <div
          class="row"
        >
          <div
            class="content"
          >
            <h4
              class="h4 title"
            >
              Manually schedule a permissions sync
            </h4>
            <div>
              Schedules a high priority permissions sync job for the current user. This action will cancel all previously queued user sync jobs.
            </div>
          </div>
          <div
            class="btnContainer"
          >
            <button
              aria-disabled="false"
              class="btn btnPrimary btn"
              type="button"
            >
              Schedule now
            </button>
            <div
              class="flash"
            >
              <small>
                Added to queue
              </small>
            </div>
          </div>
        </div>
        <div
          class="row"
        />
      </div>
    </div>
    <div
      class="container my-3 pt-3"
    >
      <div>
        <h2
          class="h2 heading"
        >
          <span
            class="wrapper breadcrumb"
          >
            <span
              class="path"
            >
              <span
                class="text"
              >
                Sync Jobs
              </span>
            </span>
          </span>
        </h2>
        <p
          class="description"
        >
          List of permission sync jobs that fetch which 
          <i>
            private
          </i>
           repositories the user can access on the code host.
        </p>
      </div>
    </div>
    <div
      class="container mb-3"
    >
      <div
        class="text-muted text-center mb-3 w-100"
      >
        <svg
          aria-hidden="true"
          class="mdi-icon icon"
          fill="currentColor"
          height="24"
          role="img"
          viewBox="0 0 24 24"
          width="24"
        >
          <path
            d="M15.5,12C18,12 20,14 20,16.5C20,17.38 19.75,18.21 19.31,18.9L22.39,22L21,23.39L17.88,20.32C17.19,20.75 16.37,21 15.5,21C13,21 11,19 11,16.5C11,14 13,12 15.5,12M15.5,14A2.5,2.5 0 0,0 13,16.5A2.5,2.5 0 0,0 15.5,19A2.5,2.5 0 0,0 18,16.5A2.5,2.5 0 0,0 15.5,14M14,6.11L8,4V15.89L9,16.24V16.5C9,17.14 9.09,17.76 9.26,18.34L8,17.9L2.66,19.97L2.5,20A0.5,0.5 0 0,1 2,19.5V4.38C2,4.15 2.15,3.97 2.36,3.9L8,2L14,4.1L19.34,2H19.5A0.5,0.5 0 0,1 20,2.5V11.81C18.83,10.69 17.25,10 15.5,10C15,10 14.5,10.06 14,10.17V6.11Z"
          />
        </svg>
        <div
          class="pt-2"
        >
          No permissions sync jobs have been found.
        </div>
      </div>
    </div>
    <div
      class="container my-3 pt-3"
    >
      <div>
        <h2
          class="h2 heading"
        >
          <span
            class="wrapper breadcrumb"
          >
            <span
              class="path"
            >
              <span
                class="text"
              >
                Accessible Repositories
              </span>
            </span>
          </span>
        </h2>
        <p
          class="description"
        >
          List of 
          <i>
            all
          </i>
           repositories the user can access on Sourcegraph.
        </p>
      </div>
    </div>
    <div
      class="container mb-3"
    >
      <div
        class="d-flex mb-3"
      >
        <div
          class="container loader-input loaderInput"
        >
          <input
            aria-label="Search repositories..."
            autocapitalize="off"
            autocomplete="off"
            autocorrect="off"
            class="form-control with-invalid-icon"
            name="query"
            placeholder="Search repositories..."
            spellcheck="false"
            type="search"
            value=""
          />
        </div>
        <div
          class="flex-1"
        />
      </div>
      <table
        class="table"
      >
        <thead>
          <tr>
            <th>
              <div
                class="text-nowrap header"
              >
                <span
                  class="fontWeightBold"
                >
                  Repository
                </span>
              </div>
            </th>
            <th>
              <div
                class="text-nowrap header"
              >
                <span
                  class="fontWeightBold"
                >
                  Reason
                </span>
              </div>
            </th>
            <th>
              <div
                class="text-nowrap header"
              >
                <span
                  class="fontWeightBold"
                >
                  Updated At
                </span>
              </div>
            </th>
            <th>
              <div
                class="text-nowrap header"
              >
                <span
                  class="fontWeightBold"
                >
                  Code host connections
                </span>
              </div>
            </th>
          </tr>
          <tr>
            <th
              class="pr-2"
            />
            <th
              class="pr-2"
            />
            <th
              class="pr-2"
            />
            <th
              class="pr-2"
            />
            <th />
          </tr>
        </thead>
        <tbody />
      </table>
    </div>
  </div>
</DocumentFragment>
`;

exports[`UserSettingsPermissionsPage > user alice with permissions 1`] = `
<DocumentFragment>
  <div
    class="w-100"
  >
    <div
      class="container mb-3"
    >
      <div>
        <h2
          class="h2 heading"
        >
          <span
            class="wrapper breadcrumb"
          >
            <span
              class="path"
            >
              <span
                class="text"
              >
                Permissions
              </span>
            </span>
          </span>
        </h2>
        <p
          class="description"
        >
          Learn more about 
          <a
            class="anchorLink"
            href="/help/admin/permissions/syncing"
          >
            permissions syncing
          </a>
          .
        </p>
      </div>
    </div>
    <div
      class="container mb-3"
    >
      <div
        class="d-flex"
      >
        <b>
          Last update to permissions 
        </b>
        <span
          class="d-flex flex-grow-1"
        >
          <span
            class="flex-grow-1 text-center"
          >
            <span
              class="timestamp"
            >
              1 minute ago
            </span>
          </span>
          <span>
            by 
            <a
              class="anchorLink"
              href="/help/admin/permissions/syncing#permission-syncing"
              rel="noopener"
              target="_blank"
            >
              user-centric permission sync
            </a>
          </span>
        </span>
      </div>
      <p
        class="text-muted mt-2 mb-4"
      >
        <svg
          aria-label="more-info text-normal"
          class="mdi-icon iconInline"
          fill="currentColor"
          height="24"
          role="img"
          viewBox="0 0 24 24"
          width="24"
        >
          <path
            d="M11,9H13V7H11M12,20C7.59,20 4,16.41 4,12C4,7.59 7.59,4 12,4C16.41,4 20,7.59 20,12C20,16.41 16.41,20 12,20M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2M11,17H13V11H11V17Z"
          />
        </svg>
         The timestamp indicates the last update made to the repository permissions of this user. If the value 
        <i>
          never
        </i>
         is displayed, it means we currently do not have any permission records for the user. However, please note that the user may have had permissions stored in Sourcegraph in the past.
      </p>
      <div
        class="actionContainer userSettingsPermissionsPageSyncContainer"
      >
        <div
          class="row"
        >
          <div
            class="content"
          >
            <h4
              class="h4 title"
            >
              Manually schedule a permissions sync
            </h4>
            <div>
              Schedules a high priority permissions sync job for the current user. This action will cancel all previously queued user sync jobs.
            </div>
          </div>
          <div
            class="btnContainer"
          >
            <button
              aria-disabled="false"
              class="btn btnPrimary btn"
              type="button"
            >
              Schedule now
            </button>
            <div
              class="flash"
            >
              <small>
                Added to queue
              </small>
            </div>
          </div>
        </div>
        <div
          class="row"
        />
      </div>
    </div>
    <div
      class="container my-3 pt-3"
    >
      <div>
        <h2
          class="h2 heading"
        >
          <span
            class="wrapper breadcrumb"
          >
            <span
              class="path"
            >
              <span
                class="text"
              >
                Sync Jobs
              </span>
            </span>
          </span>
        </h2>
        <p
          class="description"
        >
          List of permission sync jobs that fetch which 
          <i>
            private
          </i>
           repositories the user can access on the code host.
        </p>
      </div>
    </div>
    <div
      class="container mb-3"
    >
      <table
        class="table"
      >
        <thead>
          <tr>
            <th>
              <div
                class="text-nowrap header"
              >
                <span
                  class="fontWeightBold"
                >
                  Status
                </span>
              </div>
            </th>
            <th>
              <div
                class="text-nowrap header"
              >
                <span
                  class="fontWeightBold"
                >
                  Updated At
                </span>
              </div>
            </th>
            <th>
              <div
                class="text-nowrap header"
              >
                <span
                  class="fontWeightBold"
                >
                  Reason
                </span>
              </div>
            </th>
            <th>
              <div
                class="text-nowrap header alignRight"
              >
                <span
                  class="fontWeightBold"
                >
                  Added
                </span>
              </div>
            </th>
            <th>
              <div
                class="text-nowrap header alignRight"
              >
                <span
                  class="fontWeightBold"
                >
                  Removed
                </span>
              </div>
            </th>
            <th>
              <div
                class="text-nowrap header alignRight"
              >
                <span
                  class="fontWeightBold"
                >
                  Total
                </span>
              </div>
            </th>
            <th>
              <div
                class="text-nowrap header alignRight"
              >
                <span
                  class="fontWeightBold"
                >
                  Actions
                </span>
              </div>
            </th>
          </tr>
          <tr>
            <th
              class="pr-2"
            />
            <th
              class="pr-2"
            />
            <th
              class="pr-2"
            />
            <th
              class="pr-2"
            />
            <th
              class="pr-2"
            />
            <th
              class="pr-2"
            />
            <th />
          </tr>
        </thead>
        <tbody>
          <tr
            class="tableRow"
          >
            <td>
              <span
                class="badge primary statusContainer mr-1"
              >
                PROCESSING 
              </span>
            </td>
            <td>
              <span
                class="timestamp"
              >
                19 minutes ago
              </span>
            </td>
            <td
              class="reasonGroupContainer pr-1"
            >
              <div>
                <p
                  class="fontWeightMedium mb-0"
                >
                  SCHEDULE
                </p>
                <p
                  class="mb-0 text-muted text-truncate"
                >
                  <small>
                    Regular refresh of user permissions
                  </small>
                </p>
              </div>
            </td>
            <td />
            <td />
            <td />
            <td>
              <div
                class="d-flex justify-content-end"
              >
                <button
                  aria-expanded="false"
                  class="btn btnSecondary btnOutline border-0"
                  type="button"
                >
                  ...
                </button>
              </div>
            </td>
          </tr>
          <tr
            class="tableRow"
          >
            <td>
              <span
                class="badge success statusContainer mr-1"
              >
                COMPLETED 
              </span>
            </td>
            <td>
              <span
                class="timestamp"
              >
                1 minute ago
              </span>
            </td>
            <td
              class="reasonGroupContainer pr-1"
            >
              <div>
                <p
                  class="fontWeightMedium mb-0"
                >
                  SCHEDULE
                </p>
                <p
                  class="mb-0 text-muted text-truncate"
                >
                  <small>
                    Regular refresh of user permissions
                  </small>
                </p>
              </div>
            </td>
            <td>
              <div
                class="text-right textTotalNumber"
              >
                <b>
                  0
                </b>
              </div>
            </td>
            <td>
              <div
                class="text-right textTotalNumber"
              >
                <b>
                  0
                </b>
              </div>
            </td>
            <td>
              <div
                class="text-right"
              >
                <b>
                  1
                </b>
              </div>
            </td>
            <td>
              <div
                class="d-flex justify-content-end"
              >
                <button
                  aria-expanded="false"
                  class="btn btnSecondary btnOutline border-0"
                  type="button"
                >
                  ...
                </button>
              </div>
            </td>
          </tr>
          <tr
            class="tableRow"
          >
            <td>
              <span
                class="badge success statusContainer mr-1"
              >
                COMPLETED 
              </span>
            </td>
            <td>
              <span
                class="timestamp"
              >
                20 minutes ago
              </span>
            </td>
            <td
              class="reasonGroupContainer pr-1"
            >
              <div>
                <p
                  class="fontWeightMedium mb-0"
                >
                  SCHEDULE
                </p>
                <p
                  class="mb-0 text-muted text-truncate"
                >
                  <small>
                    Regular refresh of user permissions
                  </small>
                </p>
              </div>
            </td>
            <td>
              <div
                class="text-right textTotalNumber"
              >
                <b>
                  0
                </b>
              </div>
            </td>
            <td>
              <div
                class="text-right textTotalNumber"
              >
                <b>
                  0
                </b>
              </div>
            </td>
            <td>
              <div
                class="text-right"
              >
                <b>
                  1
                </b>
              </div>
            </td>
            <td>
              <div
                class="d-flex justify-content-end"
              >
                <button
                  aria-expanded="false"
                  class="btn btnSecondary btnOutline border-0"
                  type="button"
                >
                  ...
                </button>
              </div>
            </td>
          </tr>
          <tr
            class="tableRow"
          >
            <td>
              <span
                class="badge success statusContainer mr-1"
              >
                COMPLETED 
              </span>
            </td>
            <td>
              <span
                class="timestamp"
              >
                20 minutes ago
              </span>
            </td>
            <td
              class="reasonGroupContainer pr-1"
            >
              <div>
                <p
                  class="fontWeightMedium mb-0"
                >
                  SCHEDULE
                </p>
                <p
                  class="mb-0 text-muted text-truncate"
                >
                  <small>
                    Regular refresh of user permissions
                  </small>
                </p>
              </div>
            </td>
            <td>
              <div
                class="text-right textTotalNumber"
              >
                <b>
                  0
                </b>
              </div>
            </td>
            <td>
              <div
                class="text-right textTotalNumber"
              >
                <b>
                  0
                </b>
              </div>
            </td>
            <td>
              <div
                class="text-right"
              >
                <b>
                  1
                </b>
              </div>
            </td>
            <td>
              <div
                class="d-flex justify-content-end"
              >
                <button
                  aria-expanded="false"
                  class="btn btnSecondary btnOutline border-0"
                  type="button"
                >
                  ...
                </button>
              </div>
            </td>
          </tr>
          <tr
            class="tableRow"
          >
            <td>
              <span
                class="badge success statusContainer mr-1"
              >
                COMPLETED 
              </span>
            </td>
            <td>
              <span
                class="timestamp"
              >
                20 minutes ago
              </span>
            </td>
            <td
              class="reasonGroupContainer pr-1"
            >
              <div>
                <p
                  class="fontWeightMedium mb-0"
                >
                  SCHEDULE
                </p>
                <p
                  class="mb-0 text-muted text-truncate"
                >
                  <small>
                    Regular refresh of user permissions
                  </small>
                </p>
              </div>
            </td>
            <td>
              <div
                class="text-right textTotalNumber"
              >
                <b>
                  0
                </b>
              </div>
            </td>
            <td>
              <div
                class="text-right textTotalNumber"
              >
                <b>
                  0
                </b>
              </div>
            </td>
            <td>
              <div
                class="text-right"
              >
                <b>
                  1
                </b>
              </div>
            </td>
            <td>
              <div
                class="d-flex justify-content-end"
              >
                <button
                  aria-expanded="false"
                  class="btn btnSecondary btnOutline border-0"
                  type="button"
                >
                  ...
                </button>
              </div>
            </td>
          </tr>
          <tr
            class="tableRow"
          >
            <td>
              <span
                class="badge success statusContainer mr-1"
              >
                COMPLETED 
              </span>
            </td>
            <td>
              <span
                class="timestamp"
              >
                21 minutes ago
              </span>
            </td>
            <td
              class="reasonGroupContainer pr-1"
            >
              <div>
                <p
                  class="fontWeightMedium mb-0"
                >
                  SCHEDULE
                </p>
                <p
                  class="mb-0 text-muted text-truncate"
                >
                  <small>
                    Regular refresh of user permissions
                  </small>
                </p>
              </div>
            </td>
            <td>
              <div
                class="text-right textTotalNumber"
              >
                <b>
                  0
                </b>
              </div>
            </td>
            <td>
              <div
                class="text-right textTotalNumber"
              >
                <b>
                  0
                </b>
              </div>
            </td>
            <td>
              <div
                class="text-right"
              >
                <b>
                  1
                </b>
              </div>
            </td>
            <td>
              <div
                class="d-flex justify-content-end"
              >
                <button
                  aria-expanded="false"
                  class="btn btnSecondary btnOutline border-0"
                  type="button"
                >
                  ...
                </button>
              </div>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
    <div
      class="container my-3 pt-3"
    >
      <div>
        <h2
          class="h2 heading"
        >
          <span
            class="wrapper breadcrumb"
          >
            <span
              class="path"
            >
              <span
                class="text"
              >
                Accessible Repositories
              </span>
            </span>
          </span>
        </h2>
        <p
          class="description"
        >
          List of 
          <i>
            all
          </i>
           repositories the user can access on Sourcegraph.
        </p>
      </div>
    </div>
    <div
      class="container mb-3"
    >
      <div
        class="d-flex mb-3"
      >
        <div
          class="container loader-input loaderInput"
        >
          <input
            aria-label="Search repositories..."
            autocapitalize="off"
            autocomplete="off"
            autocorrect="off"
            class="form-control with-invalid-icon"
            name="query"
            placeholder="Search repositories..."
            spellcheck="false"
            type="search"
            value=""
          />
        </div>
        <div
          class="flex-1"
        />
      </div>
      <table
        class="table"
      >
        <thead>
          <tr>
            <th>
              <div
                class="text-nowrap header"
              >
                <span
                  class="fontWeightBold"
                >
                  Repository
                </span>
              </div>
            </th>
            <th>
              <div
                class="text-nowrap header"
              >
                <span
                  class="fontWeightBold"
                >
                  Reason
                </span>
              </div>
            </th>
            <th>
              <div
                class="text-nowrap header"
              >
                <span
                  class="fontWeightBold"
                >
                  Updated At
                </span>
              </div>
            </th>
            <th>
              <div
                class="text-nowrap header"
              >
                <span
                  class="fontWeightBold"
                >
                  Code host connections
                </span>
              </div>
            </th>
          </tr>
          <tr>
            <th
              class="pr-2"
            />
            <th
              class="pr-2"
            />
            <th
              class="pr-2"
            />
            <th
              class="pr-2"
            />
            <th />
          </tr>
        </thead>
        <tbody>
          <tr>
            <td>
              <div
                class="py-2"
              >
                <svg
                  aria-label="Code host logo"
                  class="mdi-icon mdi-icon iconInline mr-1"
                  fill="currentColor"
                  height="24"
                  role="img"
                  viewBox="0 0 24 24"
                  width="24"
                >
                  <path
                    d="M12,2A10,10 0 0,0 2,12C2,16.42 4.87,20.17 8.84,21.5C9.34,21.58 9.5,21.27 9.5,21C9.5,20.77 9.5,20.14 9.5,19.31C6.73,19.91 6.14,17.97 6.14,17.97C5.68,16.81 5.03,16.5 5.03,16.5C4.12,15.88 5.1,15.9 5.1,15.9C6.1,15.97 6.63,16.93 6.63,16.93C7.5,18.45 8.97,18 9.54,17.76C9.63,17.11 9.89,16.67 10.17,16.42C7.95,16.17 5.62,15.31 5.62,11.5C5.62,10.39 6,9.5 6.65,8.79C6.55,8.54 6.2,7.5 6.75,6.15C6.75,6.15 7.59,5.88 9.5,7.17C10.29,6.95 11.15,6.84 12,6.84C12.85,6.84 13.71,6.95 14.5,7.17C16.41,5.88 17.25,6.15 17.25,6.15C17.8,7.5 17.45,8.54 17.35,8.79C18,9.5 18.38,10.39 18.38,11.5C18.38,15.32 16.04,16.16 13.81,16.41C14.17,16.72 14.5,17.33 14.5,18.26C14.5,19.6 14.5,20.68 14.5,21C14.5,21.27 14.66,21.59 15.17,21.5C19.14,20.16 22,16.42 22,12A10,10 0 0,0 12,2Z"
                  />
                </svg>
                <a
                  class="anchorLink"
                  href="/github.com/hashicorp/errwrap"
                >
                  <span>
                    hashicorp/
                    <span>
                      errwrap
                    </span>
                  </span>
                </a>
              </div>
            </td>
            <td>
              <span
                class="badge primary"
              >
                Unrestricted
              </span>
            </td>
            <td>
              <div
                class="updatedAtCell"
              >
                -
              </div>
            </td>
            <td>
              <a
                class="anchorLink"
                href="/site-admin/external-services?repoID=UmVwb3NpdG9yeTox"
              >
                View
              </a>
            </td>
          </tr>
          <tr>
            <td>
              <div
                class="py-2"
              >
                <svg
                  aria-label="Code host logo"
                  class="mdi-icon mdi-icon iconInline mr-1"
                  fill="currentColor"
                  height="24"
                  role="img"
                  viewBox="0 0 24 24"
                  width="24"
                >
                  <path
                    d="M12,2A10,10 0 0,0 2,12C2,16.42 4.87,20.17 8.84,21.5C9.34,21.58 9.5,21.27 9.5,21C9.5,20.77 9.5,20.14 9.5,19.31C6.73,19.91 6.14,17.97 6.14,17.97C5.68,16.81 5.03,16.5 5.03,16.5C4.12,15.88 5.1,15.9 5.1,15.9C6.1,15.97 6.63,16.93 6.63,16.93C7.5,18.45 8.97,18 9.54,17.76C9.63,17.11 9.89,16.67 10.17,16.42C7.95,16.17 5.62,15.31 5.62,11.5C5.62,10.39 6,9.5 6.65,8.79C6.55,8.54 6.2,7.5 6.75,6.15C6.75,6.15 7.59,5.88 9.5,7.17C10.29,6.95 11.15,6.84 12,6.84C12.85,6.84 13.71,6.95 14.5,7.17C16.41,5.88 17.25,6.15 17.25,6.15C17.8,7.5 17.45,8.54 17.35,8.79C18,9.5 18.38,10.39 18.38,11.5C18.38,15.32 16.04,16.16 13.81,16.41C14.17,16.72 14.5,17.33 14.5,18.26C14.5,19.6 14.5,20.68 14.5,21C14.5,21.27 14.66,21.59 15.17,21.5C19.14,20.16 22,16.42 22,12A10,10 0 0,0 12,2Z"
                  />
                </svg>
                <a
                  class="anchorLink"
                  href="/github.com/sourcegraph-testing/etcd"
                >
                  <span>
                    sourcegraph-testing/
                    <span>
                      etcd
                    </span>
                  </span>
                </a>
              </div>
            </td>
            <td>
              <span
                class="badge primary"
              >
                Unrestricted
              </span>
            </td>
            <td>
              <div
                class="updatedAtCell"
              >
                -
              </div>
            </td>
            <td>
              <a
                class="anchorLink"
                href="/site-admin/external-services?repoID=UmVwb3NpdG9yeToy"
              >
                View
              </a>
            </td>
          </tr>
          <tr>
            <td>
              <div
                class="py-2"
              >
                <svg
                  aria-label="Code host logo"
                  class="mdi-icon mdi-icon iconInline mr-1"
                  fill="currentColor"
                  height="24"
                  role="img"
                  viewBox="0 0 24 24"
                  width="24"
                >
                  <path
                    d="M12,2A10,10 0 0,0 2,12C2,16.42 4.87,20.17 8.84,21.5C9.34,21.58 9.5,21.27 9.5,21C9.5,20.77 9.5,20.14 9.5,19.31C6.73,19.91 6.14,17.97 6.14,17.97C5.68,16.81 5.03,16.5 5.03,16.5C4.12,15.88 5.1,15.9 5.1,15.9C6.1,15.97 6.63,16.93 6.63,16.93C7.5,18.45 8.97,18 9.54,17.76C9.63,17.11 9.89,16.67 10.17,16.42C7.95,16.17 5.62,15.31 5.62,11.5C5.62,10.39 6,9.5 6.65,8.79C6.55,8.54 6.2,7.5 6.75,6.15C6.75,6.15 7.59,5.88 9.5,7.17C10.29,6.95 11.15,6.84 12,6.84C12.85,6.84 13.71,6.95 14.5,7.17C16.41,5.88 17.25,6.15 17.25,6.15C17.8,7.5 17.45,8.54 17.35,8.79C18,9.5 18.38,10.39 18.38,11.5C18.38,15.32 16.04,16.16 13.81,16.41C14.17,16.72 14.5,17.33 14.5,18.26C14.5,19.6 14.5,20.68 14.5,21C14.5,21.27 14.66,21.59 15.17,21.5C19.14,20.16 22,16.42 22,12A10,10 0 0,0 12,2Z"
                  />
                </svg>
                <a
                  class="anchorLink"
                  href="/github.com/sourcegraph-testing/tidb"
                >
                  <span>
                    sourcegraph-testing/
                    <span>
                      tidb
                    </span>
                  </span>
                </a>
              </div>
            </td>
            <td>
              <span
                class="badge primary"
              >
                Unrestricted
              </span>
            </td>
            <td>
              <div
                class="updatedAtCell"
              >
                -
              </div>
            </td>
            <td>
              <a
                class="anchorLink"
                href="/site-admin/external-services?repoID=UmVwb3NpdG9yeToz"
              >
                View
              </a>
            </td>
          </tr>
          <tr>
            <td>
              <div
                class="py-2"
              >
                <svg
                  aria-label="Code host logo"
                  class="mdi-icon mdi-icon iconInline mr-1"
                  fill="currentColor"
                  height="24"
                  role="img"
                  viewBox="0 0 24 24"
                  width="24"
                >
                  <path
                    d="M12,2A10,10 0 0,0 2,12C2,16.42 4.87,20.17 8.84,21.5C9.34,21.58 9.5,21.27 9.5,21C9.5,20.77 9.5,20.14 9.5,19.31C6.73,19.91 6.14,17.97 6.14,17.97C5.68,16.81 5.03,16.5 5.03,16.5C4.12,15.88 5.1,15.9 5.1,15.9C6.1,15.97 6.63,16.93 6.63,16.93C7.5,18.45 8.97,18 9.54,17.76C9.63,17.11 9.89,16.67 10.17,16.42C7.95,16.17 5.62,15.31 5.62,11.5C5.62,10.39 6,9.5 6.65,8.79C6.55,8.54 6.2,7.5 6.75,6.15C6.75,6.15 7.59,5.88 9.5,7.17C10.29,6.95 11.15,6.84 12,6.84C12.85,6.84 13.71,6.95 14.5,7.17C16.41,5.88 17.25,6.15 17.25,6.15C17.8,7.5 17.45,8.54 17.35,8.79C18,9.5 18.38,10.39 18.38,11.5C18.38,15.32 16.04,16.16 13.81,16.41C14.17,16.72 14.5,17.33 14.5,18.26C14.5,19.6 14.5,20.68 14.5,21C14.5,21.27 14.66,21.59 15.17,21.5C19.14,20.16 22,16.42 22,12A10,10 0 0,0 12,2Z"
                  />
                </svg>
                <a
                  class="anchorLink"
                  href="/github.com/sourcegraph-testing/titan"
                >
                  <span>
                    sourcegraph-testing/
                    <span>
                      titan
                    </span>
                  </span>
                </a>
              </div>
            </td>
            <td>
              <span
                class="badge primary"
              >
                Unrestricted
              </span>
            </td>
            <td>
              <div
                class="updatedAtCell"
              >
                -
              </div>
            </td>
            <td>
              <a
                class="anchorLink"
                href="/site-admin/external-services?repoID=UmVwb3NpdG9yeTo0"
              >
                View
              </a>
            </td>
          </tr>
          <tr>
            <td>
              <div
                class="py-2"
              >
                <svg
                  aria-label="Code host logo"
                  class="mdi-icon mdi-icon iconInline mr-1"
                  fill="currentColor"
                  height="24"
                  role="img"
                  viewBox="0 0 24 24"
                  width="24"
                >
                  <path
                    d="M12,2A10,10 0 0,0 2,12C2,16.42 4.87,20.17 8.84,21.5C9.34,21.58 9.5,21.27 9.5,21C9.5,20.77 9.5,20.14 9.5,19.31C6.73,19.91 6.14,17.97 6.14,17.97C5.68,16.81 5.03,16.5 5.03,16.5C4.12,15.88 5.1,15.9 5.1,15.9C6.1,15.97 6.63,16.93 6.63,16.93C7.5,18.45 8.97,18 9.54,17.76C9.63,17.11 9.89,16.67 10.17,16.42C7.95,16.17 5.62,15.31 5.62,11.5C5.62,10.39 6,9.5 6.65,8.79C6.55,8.54 6.2,7.5 6.75,6.15C6.75,6.15 7.59,5.88 9.5,7.17C10.29,6.95 11.15,6.84 12,6.84C12.85,6.84 13.71,6.95 14.5,7.17C16.41,5.88 17.25,6.15 17.25,6.15C17.8,7.5 17.45,8.54 17.35,8.79C18,9.5 18.38,10.39 18.38,11.5C18.38,15.32 16.04,16.16 13.81,16.41C14.17,16.72 14.5,17.33 14.5,18.26C14.5,19.6 14.5,20.68 14.5,21C14.5,21.27 14.66,21.59 15.17,21.5C19.14,20.16 22,16.42 22,12A10,10 0 0,0 12,2Z"
                  />
                </svg>
                <a
                  class="anchorLink"
                  href="/github.com/sourcegraph-testing/zap"
                >
                  <span>
                    sourcegraph-testing/
                    <span>
                      zap
                    </span>
                  </span>
                </a>
              </div>
            </td>
            <td>
              <span
                class="badge primary"
              >
                Unrestricted
              </span>
            </td>
            <td>
              <div
                class="updatedAtCell"
              >
                -
              </div>
            </td>
            <td>
              <a
                class="anchorLink"
                href="/site-admin/external-services?repoID=UmVwb3NpdG9yeTo1"
              >
                View
              </a>
            </td>
          </tr>
          <tr>
            <td>
              <div
                class="py-2"
              >
                <svg
                  aria-label="Code host logo"
                  class="mdi-icon mdi-icon iconInline mr-1"
                  fill="currentColor"
                  height="24"
                  role="img"
                  viewBox="0 0 24 24"
                  width="24"
                >
                  <path
                    d="M12,2A10,10 0 0,0 2,12C2,16.42 4.87,20.17 8.84,21.5C9.34,21.58 9.5,21.27 9.5,21C9.5,20.77 9.5,20.14 9.5,19.31C6.73,19.91 6.14,17.97 6.14,17.97C5.68,16.81 5.03,16.5 5.03,16.5C4.12,15.88 5.1,15.9 5.1,15.9C6.1,15.97 6.63,16.93 6.63,16.93C7.5,18.45 8.97,18 9.54,17.76C9.63,17.11 9.89,16.67 10.17,16.42C7.95,16.17 5.62,15.31 5.62,11.5C5.62,10.39 6,9.5 6.65,8.79C6.55,8.54 6.2,7.5 6.75,6.15C6.75,6.15 7.59,5.88 9.5,7.17C10.29,6.95 11.15,6.84 12,6.84C12.85,6.84 13.71,6.95 14.5,7.17C16.41,5.88 17.25,6.15 17.25,6.15C17.8,7.5 17.45,8.54 17.35,8.79C18,9.5 18.38,10.39 18.38,11.5C18.38,15.32 16.04,16.16 13.81,16.41C14.17,16.72 14.5,17.33 14.5,18.26C14.5,19.6 14.5,20.68 14.5,21C14.5,21.27 14.66,21.59 15.17,21.5C19.14,20.16 22,16.42 22,12A10,10 0 0,0 12,2Z"
                  />
                </svg>
                <a
                  class="anchorLink"
                  href="/github.com/alice/acme-destroy"
                >
                  <span>
                    alice/
                    <span>
                      acme-destroy
                    </span>
                  </span>
                </a>
              </div>
            </td>
            <td>
              <span
                class="badge secondary"
              >
                Site Admin
              </span>
            </td>
            <td>
              <div
                class="updatedAtCell"
              >
                <span
                  class="timestamp"
                >
                  about 1 year ago
                </span>
              </div>
            </td>
            <td>
              <a
                class="anchorLink"
                href="/site-admin/external-services?repoID=UmVwb3NpdG9yeTo4"
              >
                View
              </a>
            </td>
          </tr>
          <tr>
            <td>
              <div
                class="py-2"
              >
                <svg
                  aria-label="Code host logo"
                  class="mdi-icon mdi-icon iconInline mr-1"
                  fill="currentColor"
                  height="24"
                  role="img"
                  viewBox="0 0 24 24"
                  width="24"
                >
                  <path
                    d="M21.94 13.11L20.89 9.89C20.89 9.86 20.88 9.83 20.87 9.8L18.76 3.32C18.65 3 18.33 2.75 17.96 2.75C17.6 2.75 17.28 3 17.17 3.33L15.17 9.5H8.84L6.83 3.33C6.72 3 6.4 2.75 6.04 2.75H6.04C5.67 2.75 5.35 3 5.24 3.33L3.13 9.82C3.13 9.82 3.13 9.83 3.13 9.83L2.06 13.11C1.9 13.61 2.07 14.15 2.5 14.45L11.72 21.16C11.89 21.28 12.11 21.28 12.28 21.15L21.5 14.45C21.93 14.15 22.1 13.61 21.94 13.11M8.15 10.45L10.72 18.36L4.55 10.45M13.28 18.37L15.75 10.78L15.85 10.45H19.46L13.87 17.61M17.97 3.94L19.78 9.5H16.16M14.86 10.45L13.07 15.96L12 19.24L9.14 10.45M6.03 3.94L7.84 9.5H4.23M3.05 13.69C2.96 13.62 2.92 13.5 2.96 13.4L3.75 10.97L9.57 18.42M20.95 13.69L14.44 18.42L14.46 18.39L20.25 10.97L21.04 13.4C21.08 13.5 21.04 13.62 20.95 13.69"
                  />
                </svg>
                <a
                  class="anchorLink"
                  href="/gitlab.com/alice/acme-frontend"
                >
                  <span>
                    alice/
                    <span>
                      acme-frontend
                    </span>
                  </span>
                </a>
              </div>
            </td>
            <td>
              <span
                class="badge success"
              >
                Explicit API
              </span>
            </td>
            <td>
              <div
                class="updatedAtCell"
              >
                <span
                  class="timestamp"
                >
                  4 months ago
                </span>
              </div>
            </td>
            <td>
              <a
                class="anchorLink"
                href="/site-admin/external-services?repoID=UmVwb3NpdG9yeTo5"
              >
                View
              </a>
            </td>
          </tr>
          <tr>
            <td>
              <div
                class="py-2"
              >
                <svg
                  aria-label="Code host logo"
                  class="mdi-icon mdi-icon iconInline mr-1"
                  fill="currentColor"
                  height="24"
                  role="img"
                  viewBox="0 0 24 24"
                  width="24"
                >
                  <path
                    d="M12,2A10,10 0 0,0 2,12C2,16.42 4.87,20.17 8.84,21.5C9.34,21.58 9.5,21.27 9.5,21C9.5,20.77 9.5,20.14 9.5,19.31C6.73,19.91 6.14,17.97 6.14,17.97C5.68,16.81 5.03,16.5 5.03,16.5C4.12,15.88 5.1,15.9 5.1,15.9C6.1,15.97 6.63,16.93 6.63,16.93C7.5,18.45 8.97,18 9.54,17.76C9.63,17.11 9.89,16.67 10.17,16.42C7.95,16.17 5.62,15.31 5.62,11.5C5.62,10.39 6,9.5 6.65,8.79C6.55,8.54 6.2,7.5 6.75,6.15C6.75,6.15 7.59,5.88 9.5,7.17C10.29,6.95 11.15,6.84 12,6.84C12.85,6.84 13.71,6.95 14.5,7.17C16.41,5.88 17.25,6.15 17.25,6.15C17.8,7.5 17.45,8.54 17.35,8.79C18,9.5 18.38,10.39 18.38,11.5C18.38,15.32 16.04,16.16 13.81,16.41C14.17,16.72 14.5,17.33 14.5,18.26C14.5,19.6 14.5,20.68 14.5,21C14.5,21.27 14.66,21.59 15.17,21.5C19.14,20.16 22,16.42 22,12A10,10 0 0,0 12,2Z"
                  />
                </svg>
                <a
                  class="anchorLink"
                  href="/github.com/alice/acme-api"
                >
                  <span>
                    alice/
                    <span>
                      acme-api
                    </span>
                  </span>
                </a>
              </div>
            </td>
            <td>
              <span
                class="badge success"
              >
                Permissions Sync
              </span>
            </td>
            <td>
              <div
                class="updatedAtCell"
              >
                <span
                  class="timestamp"
                >
                  1 minute ago
                </span>
              </div>
            </td>
            <td>
              <a
                class="anchorLink"
                href="/site-admin/external-services?repoID=UmVwb3NpdG9yeToxMQ=="
              >
                View
              </a>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</DocumentFragment>
`;
